--- a/css/labirinto.css
+++ b/css/labirinto.css
@@ -4,6 +4,8 @@
 
 #mazeCanvas {
   display: block;
+  width: min(280px, calc(100vw - 28px));
+  height: min(280px, calc(100vw - 28px));
   border-radius: 12px;
   border: 1px solid rgba(167,139,250,.18);
   box-shadow:
