--- a/css/oddone.css
+++ b/css/oddone.css
@@ -4,8 +4,8 @@
 
 #oddCanvas {
   display: block;
-  width: 280px;
-  height: 280px;
+  width: min(280px, calc(100vw - 28px));
+  height: min(280px, calc(100vw - 28px));
   border-radius: 12px;
   border: 1px solid rgba(167,139,250,.18);
   box-shadow:
